fix issue with scrollbar showing up in chrome windows full screen view: hide overflow for html element as well

--- a/web/app/styles/app.scss
+++ b/web/app/styles/app.scss
@@ -378,7 +378,9 @@ html, body {
     .columns {
         padding: 0;
     }
-
+    html {
+        overflow: hidden;
+    }
     body {
         background: #000000;
         height: 100vh;
